--- a/vertx-event-sourcing/pom.xml
+++ b/vertx-event-sourcing/pom.xml
@@ -51,7 +51,7 @@
     </dependency>
     <dependency>
       <groupId>io.vertx.skeleton</groupId>
-      <artifactId>vertx-ccp</artifactId>
+      <artifactId>job-queue</artifactId>
     </dependency>
     <dependency>
       <groupId>io.vertx.skeleton</groupId>
