--- a/eventx-launcher/pom.xml
+++ b/eventx-launcher/pom.xml
@@ -30,31 +30,18 @@
   </dependencyManagement>
 
   <dependencies>
+<!--    <dependency>-->
+<!--      <groupId>io.netty</groupId>-->
+<!--      <artifactId>netty-transport-native-epoll</artifactId>-->
+<!--      <classifier>linux-x86_64</classifier>-->
+<!--    </dependency>-->
     <dependency>
-      <groupId>io.activej</groupId>
-      <artifactId>activej-inject</artifactId>
-      <version>${activej.version}</version>
-    </dependency>
-    <dependency>
-      <groupId>io.netty</groupId>
-      <artifactId>netty-transport-native-epoll</artifactId>
-      <classifier>linux-x86_64</classifier>
-    </dependency>
-    <dependency>
-      <groupId>org.reflections</groupId>
-      <artifactId>reflections</artifactId>
+      <groupId>io.vertx</groupId>
+      <artifactId>vertx-io_uring-incubator</artifactId>
+      <version>4.4.0</version>
     </dependency>
 
     <!--    Internal -->
-    <dependency>
-      <groupId>io.vertx.eventx</groupId>
-      <artifactId>common</artifactId>
-    </dependency>
-    <dependency>
-      <groupId>io.vertx.eventx</groupId>
-      <artifactId>sql</artifactId>
-      <version>${project.version}</version>
-    </dependency>
     <dependency>
       <groupId>io.vertx.eventx</groupId>
       <artifactId>solr-client</artifactId>
@@ -66,6 +53,12 @@
     <dependency>
       <groupId>io.vertx.eventx</groupId>
       <artifactId>event-sourcing</artifactId>
+      <exclusions>
+        <exclusion>
+          <groupId>io.vertx.eventx</groupId>
+          <artifactId>test</artifactId>
+        </exclusion>
+      </exclusions>
     </dependency>
     <dependency>
       <groupId>io.vertx.eventx</groupId>
@@ -74,20 +67,46 @@
     <dependency>
       <groupId>io.vertx.eventx</groupId>
       <artifactId>task-queue</artifactId>
-      <version>${project.version}</version>
+      <exclusions>
+        <exclusion>
+          <groupId>io.vertx.eventx</groupId>
+          <artifactId>test</artifactId>
+        </exclusion>
+      </exclusions>
     </dependency>
     <dependency>
       <groupId>io.vertx.eventx</groupId>
       <artifactId>sql</artifactId>
-      <version>${project.version}</version>
+      <exclusions>
+        <exclusion>
+          <groupId>io.vertx.eventx</groupId>
+          <artifactId>test</artifactId>
+        </exclusion>
+      </exclusions>
     </dependency>
     <dependency>
       <groupId>io.vertx.eventx</groupId>
       <artifactId>task</artifactId>
+      <exclusions>
+        <exclusion>
+          <groupId>io.vertx.eventx</groupId>
+          <artifactId>test</artifactId>
+        </exclusion>
+      </exclusions>
     </dependency>
     <dependency>
       <groupId>io.vertx.eventx</groupId>
       <artifactId>common</artifactId>
+    </dependency>
+    <dependency>
+      <groupId>io.vertx.eventx</groupId>
+      <artifactId>saga</artifactId>
+      <exclusions>
+        <exclusion>
+          <groupId>io.vertx.eventx</groupId>
+          <artifactId>test</artifactId>
+        </exclusion>
+      </exclusions>
     </dependency>
     <!--    -->
 
