--- a/test/pom.xml
+++ b/test/pom.xml
@@ -34,7 +34,7 @@
     <!--    Test Dependencies  -->
     <dependency>
       <groupId>io.vertx.eventx</groupId>
-      <artifactId>eventx-launcher</artifactId>
+      <artifactId>launcher</artifactId>
       <scope>compile</scope>
     </dependency>
     <dependency>
