--- a/eventx/pom.xml
+++ b/eventx/pom.xml
@@ -31,11 +31,6 @@
 
   <dependencies>
     <dependency>
-      <groupId>com.github.ben-manes.caffeine</groupId>
-      <artifactId>caffeine</artifactId>
-      <version>3.0.6</version>
-    </dependency>
-    <dependency>
       <groupId>io.vertx</groupId>
       <artifactId>vertx-core</artifactId>
     </dependency>
@@ -47,11 +42,6 @@
     <dependency>
       <groupId>io.vertx.eventx</groupId>
       <artifactId>eventx-queue</artifactId>
-      <version>${project.version}</version>
-    </dependency>
-    <dependency>
-      <groupId>io.vertx.eventx</groupId>
-      <artifactId>eventx-http-bridge</artifactId>
       <version>${project.version}</version>
     </dependency>
     <dependency>
@@ -79,6 +69,10 @@
       <artifactId>reflections</artifactId>
     </dependency>
     <dependency>
+      <groupId>io.activej</groupId>
+      <artifactId>activej-inject</artifactId>
+    </dependency>
+    <dependency>
       <groupId>com.google.guava</groupId>
       <artifactId>guava</artifactId>
       <version>31.1-jre</version>
@@ -93,11 +87,6 @@
       <groupId>commons-codec</groupId>
       <artifactId>commons-codec</artifactId>
       <version>1.15</version>
-    </dependency>
-    <dependency>
-      <groupId>javax.ws.rs</groupId>
-      <artifactId>javax.ws.rs-api</artifactId>
-      <version>2.1.1</version>
     </dependency>
   </dependencies>
 </project>
