--- a/eventx-infrastructure/eventx-sql/pom.xml
+++ b/eventx-infrastructure/eventx-sql/pom.xml
@@ -57,5 +57,9 @@
       <artifactId>liquibase-slf4j</artifactId>
       <scope>runtime</scope>
     </dependency>
+    <dependency>
+      <groupId>ch.qos.logback</groupId>
+      <artifactId>logback-classic</artifactId>
+    </dependency>
   </dependencies>
 </project>
