--- a/eventx-infrastructure/eventx-eventbus-projections/pom.xml
+++ b/eventx-infrastructure/eventx-eventbus-projections/pom.xml
@@ -33,5 +33,9 @@
       <artifactId>eventx</artifactId>
       <version>${project.version}</version>
     </dependency>
+    <dependency>
+      <groupId>io.soabase.record-builder</groupId>
+      <artifactId>record-builder-processor</artifactId>
+    </dependency>
   </dependencies>
 </project>
