--- a/eventx-dependencies/pom.xml
+++ b/eventx-dependencies/pom.xml
@@ -152,6 +152,12 @@
         <artifactId>liquibase-slf4j</artifactId>
         <version>${liquibase-slf4j.version}</version>
       </dependency>
+      <dependency>
+        <groupId>io.soabase.record-builder</groupId>
+        <artifactId>record-builder-processor</artifactId>
+        <version>36</version>
+        <scope>provided</scope>
+      </dependency>
       <!---->
     </dependencies>
   </dependencyManagement>
