--- a/eventx-infrastructure/eventx-http-client/pom.xml
+++ b/eventx-infrastructure/eventx-http-client/pom.xml
@@ -23,9 +23,13 @@
       <artifactId>eventx</artifactId>
       <version>${project.version}</version>
     </dependency>
-      <dependency>
-          <groupId>io.smallrye.reactive</groupId>
-          <artifactId>smallrye-mutiny-vertx-web-client</artifactId>
-      </dependency>
+    <dependency>
+      <groupId>io.smallrye.reactive</groupId>
+      <artifactId>smallrye-mutiny-vertx-web-client</artifactId>
+    </dependency>
+    <dependency>
+      <groupId>io.soabase.record-builder</groupId>
+      <artifactId>record-builder-processor</artifactId>
+    </dependency>
   </dependencies>
 </project>
