--- a/eventx-infrastructure/eventx-postgres-storage/pom.xml
+++ b/eventx-infrastructure/eventx-postgres-storage/pom.xml
@@ -30,5 +30,9 @@
       <version>${project.version}</version>
       <scope>provided</scope>
     </dependency>
+    <dependency>
+      <groupId>io.soabase.record-builder</groupId>
+      <artifactId>record-builder-processor</artifactId>
+    </dependency>
   </dependencies>
 </project>
