--- a/eventx-infrastructure/eventx-sql/pom.xml
+++ b/eventx-infrastructure/eventx-sql/pom.xml
@@ -61,5 +61,10 @@
       <groupId>ch.qos.logback</groupId>
       <artifactId>logback-classic</artifactId>
     </dependency>
+
+    <dependency>
+      <groupId>io.soabase.record-builder</groupId>
+      <artifactId>record-builder-processor</artifactId>
+    </dependency>
   </dependencies>
 </project>
