--- a/eventx-infrastructure/eventx-task/pom.xml
+++ b/eventx-infrastructure/eventx-task/pom.xml
@@ -54,6 +54,10 @@
       <groupId>io.activej</groupId>
       <artifactId>activej-inject</artifactId>
     </dependency>
+    <dependency>
+      <groupId>io.soabase.record-builder</groupId>
+      <artifactId>record-builder-processor</artifactId>
+    </dependency>
   </dependencies>
 
 </project>
