--- a/eventx-dependencies/pom.xml
+++ b/eventx-dependencies/pom.xml
@@ -16,9 +16,9 @@
     <maven.compiler.source>17</maven.compiler.source>
     <maven.compiler.target>17</maven.compiler.target>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-    <vertx.version>4.3.6</vertx.version>
+    <vertx.version>4.4.1</vertx.version>
     <mutiny.vertx.version>3.2.0</mutiny.vertx.version>
-    <smallrye-mutiny-vertx.version>3.2.0</smallrye-mutiny-vertx.version>
+    <smallrye-mutiny-vertx.version>3.3.0</smallrye-mutiny-vertx.version>
     <jackson.version>2.14.0</jackson.version>
     <jackson-annotations.version>2.13.4</jackson-annotations.version>
     <logback-classic.version>1.2.9</logback-classic.version>
@@ -121,6 +121,17 @@
         <groupId>io.vertx</groupId>
         <artifactId>vertx-sockjs-service-proxy</artifactId>
         <version>${vertx.version}</version>
+      </dependency>
+      <dependency>
+        <groupId>io.vertx</groupId>
+        <artifactId>vertx-io_uring-incubator</artifactId>
+        <version>${vertx.version}</version>
+      </dependency>
+      <dependency>
+        <groupId>io.vertx</groupId>
+        <artifactId>vertx-codegen</artifactId>
+        <version>${vertx.version}</version>
+        <classifier>processor</classifier>
       </dependency>
       <dependency>
         <groupId>io.vertx</groupId>
