--- a/eventx-dependencies/pom.xml
+++ b/eventx-dependencies/pom.xml
@@ -127,11 +127,11 @@
         <artifactId>crac</artifactId>
         <version>0.1.3</version>
       </dependency>
-      <dependency>
-        <groupId>io.vertx</groupId>
-        <artifactId>vertx-io_uring-incubator</artifactId>
-        <version>${vertx.version}</version>
-      </dependency>
+<!--      <dependency>-->
+<!--        <groupId>io.vertx</groupId>-->
+<!--        <artifactId>vertx-io_uring-incubator</artifactId>-->
+<!--        <version>${vertx.version}</version>-->
+<!--      </dependency>-->
       <dependency>
         <groupId>io.vertx</groupId>
         <artifactId>vertx-codegen</artifactId>
