--- a/eventx/pom.xml
+++ b/eventx/pom.xml
@@ -111,14 +111,18 @@
       <version>4.3.6</version>
       <scope>compile</scope>
     </dependency>
-    <dependency>
-      <groupId>io.vertx</groupId>
-      <artifactId>vertx-io_uring-incubator</artifactId>
-    </dependency>
+<!--    <dependency>-->
+<!--      <groupId>io.vertx</groupId>-->
+<!--      <artifactId>vertx-io_uring-incubator</artifactId>-->
+<!--    </dependency>-->
     <dependency>
       <groupId>org.crac</groupId>
       <artifactId>crac</artifactId>
       <version>0.1.3</version>
+    </dependency>
+    <dependency>
+      <groupId>com.fasterxml.jackson.core</groupId>
+      <artifactId>jackson-annotations</artifactId>
     </dependency>
   </dependencies>
 </project>
