- move tenant to command interface - fixes in verticle - bus adjustments - fixes in cache

--- a/eventx-infrastructure/eventx-postgres-storage/pom.xml
+++ b/eventx-infrastructure/eventx-postgres-storage/pom.xml
@@ -23,6 +23,7 @@
       <groupId>io.eventx</groupId>
       <artifactId>eventx-sql</artifactId>
       <version>${project.version}</version>
+      <scope>compile</scope>
     </dependency>
     <dependency>
       <groupId>io.eventx</groupId>
