--- a/eventx-infrastructure/eventx-queue/pom.xml
+++ b/eventx-infrastructure/eventx-queue/pom.xml
@@ -36,6 +36,10 @@
       <groupId>io.soabase.record-builder</groupId>
       <artifactId>record-builder-processor</artifactId>
     </dependency>
+    <dependency>
+      <groupId>com.fasterxml.jackson.core</groupId>
+      <artifactId>jackson-annotations</artifactId>
+    </dependency>
   </dependencies>
 
 
