--- a/eventx-infrastructure/pom.xml
+++ b/eventx-infrastructure/pom.xml
@@ -20,6 +20,7 @@
     <module>eventx-http-bridge</module>
     <module>eventx-config-storage</module>
     <module>eventx-postgres-storage</module>
+    <module>eventx-redis-storage</module>
     <module>eventx-http-client</module>
   </modules>
 
