--- a/eventx-dependencies/pom.xml
+++ b/eventx-dependencies/pom.xml
@@ -18,19 +18,18 @@
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     <jackson.version>2.14.0</jackson.version>
     <jackson-annotations.version>2.13.4</jackson-annotations.version>
-    <logback-classic.version>1.2.9</logback-classic.version>
+    <logback-classic.version>1.4.7</logback-classic.version>
     <smallrye-open-api.version>2.1.20</smallrye-open-api.version>
     <smallrye-open-api-core.version>2.2.0</smallrye-open-api-core.version>
     <smallrye-open-api-jaxrs.version>2.2.0</smallrye-open-api-jaxrs.version>
     <smallrye-open-api-maven-plugin.version>2.1.17</smallrye-open-api-maven-plugin.version>
     <javax.ws.rs-api.version>2.1.1</javax.ws.rs-api.version>
     <liquibase-core.version>4.12.0</liquibase-core.version>
-    <postgresql.version>42.4.1</postgresql.version>
+    <postgresql.version>42.4.3</postgresql.version>
     <liquibase-slf4j.version>4.1.0</liquibase-slf4j.version>
-    <logback-classic.version>1.2.7</logback-classic.version>
     <reactiverse-contextual-logging.version>1.1.2</reactiverse-contextual-logging.version>
     <solrj.version>9.0.0</solrj.version>
-    <slf4j-api.version>1.7.32</slf4j-api.version>
+    <slf4j-api.version>2.0.7</slf4j-api.version>
     <reflections.version>0.10.2</reflections.version>
     <activej.version>5.4.3</activej.version>
     <crac.version>0.1.3</crac.version>
@@ -42,6 +41,11 @@
         <artifactId>netty-transport-native-epoll</artifactId>
         <classifier>linux-x86_64</classifier>
         <version>${netty-transport-native-epoll.version}</version>
+      </dependency>
+      <dependency>
+        <groupId>io.smallrye.reactive</groupId>
+        <artifactId>smallrye-mutiny-vertx-redis-client</artifactId>
+        <version>${mutiny.vertx.version}</version>
       </dependency>
       <dependency>
         <groupId>io.reactiverse</groupId>
