--- a/eventx-infrastructure/eventx-http-bridge/pom.xml
+++ b/eventx-infrastructure/eventx-http-bridge/pom.xml
@@ -15,6 +15,7 @@
     <maven.compiler.source>17</maven.compiler.source>
     <maven.compiler.target>17</maven.compiler.target>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+    <micrometer-registry-prometheus.version>1.10.2</micrometer-registry-prometheus.version>
   </properties>
 
   <dependencyManagement>
@@ -41,7 +42,7 @@
     </dependency>
     <dependency>
       <groupId>io.smallrye.reactive</groupId>
-      <artifactId>smallrye-mutiny-health-check</artifactId>
+      <artifactId>smallrye-mutiny-vertx-health-check</artifactId>
     </dependency>
     <dependency>
       <groupId>io.vertx</groupId>
@@ -51,7 +52,7 @@
     <dependency>
       <groupId>io.micrometer</groupId>
       <artifactId>micrometer-registry-prometheus</artifactId>
-      <version>1.10.2</version>
+      <version>${micrometer-registry-prometheus.version}</version>
     </dependency>
     <dependency>
       <groupId>io.soabase.record-builder</groupId>
