--- a/eventx/pom.xml
+++ b/eventx/pom.xml
@@ -15,6 +15,11 @@
     <maven.compiler.source>17</maven.compiler.source>
     <maven.compiler.target>17</maven.compiler.target>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+    <micrometer-registry-prometheus.version>1.10.2</micrometer-registry-prometheus.version>
+    <commons-codec.version>1.15</commons-codec.version>
+    <crac.version>0.1.3</crac.version>
+    <allgood-consistent-hash.version>1.0.0</allgood-consistent-hash.version>
+    <guava.version>31.1-jre</guava.version>
   </properties>
 
   <dependencyManagement>
@@ -87,35 +92,35 @@
     <dependency>
       <groupId>com.google.guava</groupId>
       <artifactId>guava</artifactId>
-      <version>31.1-jre</version>
+      <version>${guava.version}</version>
       <scope>compile</scope>
     </dependency>
     <dependency>
       <groupId>com.github.ishugaliy</groupId>
       <artifactId>allgood-consistent-hash</artifactId>
-      <version>1.0.0</version>
+      <version>${allgood-consistent-hash.version}</version>
     </dependency>
     <dependency>
       <groupId>commons-codec</groupId>
       <artifactId>commons-codec</artifactId>
-      <version>1.15</version>
+      <version>${commons-codec.version}</version>
     </dependency>
     <dependency>
       <groupId>io.micrometer</groupId>
       <artifactId>micrometer-registry-prometheus</artifactId>
-      <version>1.10.2</version>
+      <version>${micrometer-registry-prometheus.version}</version>
     </dependency>
     <dependency>
       <groupId>io.vertx</groupId>
       <artifactId>vertx-micrometer-metrics</artifactId>
-      <version>4.3.6</version>
+      <version>${vertx.version}</version>
       <scope>compile</scope>
     </dependency>
 
     <dependency>
       <groupId>org.crac</groupId>
       <artifactId>crac</artifactId>
-      <version>0.1.3</version>
+      <version>${crac.version}</version>
     </dependency>
     <dependency>
       <groupId>com.fasterxml.jackson.core</groupId>
