--- a/eventx/pom.xml
+++ b/eventx/pom.xml
@@ -45,6 +45,11 @@
       <version>${project.version}</version>
     </dependency>
     <dependency>
+      <groupId>com.google.auto.service</groupId>
+      <artifactId>auto-service</artifactId>
+      <version>1.1.1</version>
+    </dependency>
+    <dependency>
       <groupId>io.vertx</groupId>
       <artifactId>vertx-sockjs-service-proxy</artifactId>
     </dependency>
@@ -66,7 +71,6 @@
       <groupId>io.soabase.record-builder</groupId>
       <artifactId>record-builder-processor</artifactId>
     </dependency>
-
     <!--    Logging Dependencies -->
     <dependency>
       <groupId>org.slf4j</groupId>
@@ -81,14 +85,6 @@
       <artifactId>reactiverse-contextual-logging</artifactId>
     </dependency>
     <!---->
-    <dependency>
-      <groupId>org.reflections</groupId>
-      <artifactId>reflections</artifactId>
-    </dependency>
-    <dependency>
-      <groupId>io.activej</groupId>
-      <artifactId>activej-inject</artifactId>
-    </dependency>
     <dependency>
       <groupId>com.google.guava</groupId>
       <artifactId>guava</artifactId>
@@ -116,7 +112,6 @@
       <version>${vertx.version}</version>
       <scope>compile</scope>
     </dependency>
-
     <dependency>
       <groupId>org.crac</groupId>
       <artifactId>crac</artifactId>
