--- a/eventx-test/pom.xml
+++ b/eventx-test/pom.xml
@@ -70,6 +70,11 @@
     </dependency>
     <dependency>
       <groupId>io.eventx</groupId>
+      <artifactId>eventx-config-storage</artifactId>
+      <version>${project.version}</version>
+    </dependency>
+    <dependency>
+      <groupId>io.eventx</groupId>
       <artifactId>eventx-postgres-storage</artifactId>
       <version>${project.version}</version>
     </dependency>
