--- a/eventx/pom.xml
+++ b/eventx/pom.xml
@@ -20,6 +20,8 @@
     <crac.version>0.1.3</crac.version>
     <allgood-consistent-hash.version>1.0.0</allgood-consistent-hash.version>
     <guava.version>31.1-jre</guava.version>
+    <auto-service.version>1.1.1</auto-service.version>
+    <caffeine.version>3.0.6</caffeine.version>
   </properties>
 
   <dependencyManagement>
@@ -36,18 +38,23 @@
 
   <dependencies>
     <dependency>
+      <groupId>com.github.ben-manes.caffeine</groupId>
+      <artifactId>caffeine</artifactId>
+      <version>${caffeine.version}</version>
+    </dependency>
+    <dependency>
       <groupId>io.vertx</groupId>
       <artifactId>vertx-core</artifactId>
     </dependency>
     <dependency>
-      <groupId>io.eventx</groupId>
-      <artifactId>eventx-config-storage</artifactId>
-      <version>${project.version}</version>
-    </dependency>
-    <dependency>
       <groupId>com.google.auto.service</groupId>
       <artifactId>auto-service</artifactId>
-      <version>1.1.1</version>
+      <version>${auto-service.version}</version>
+    </dependency>
+    <dependency>
+      <groupId>com.fasterxml.jackson.dataformat</groupId>
+      <artifactId>jackson-dataformat-yaml</artifactId>
+      <version>2.14.0</version>
     </dependency>
     <dependency>
       <groupId>io.vertx</groupId>
@@ -58,9 +65,16 @@
       <artifactId>vertx-service-proxy</artifactId>
     </dependency>
     <dependency>
-      <groupId>io.eventx</groupId>
-      <artifactId>eventx-queue</artifactId>
-      <version>${project.version}</version>
+      <groupId>io.vertx</groupId>
+      <artifactId>vertx-config-kubernetes-configmap</artifactId>
+    </dependency>
+    <dependency>
+      <groupId>io.smallrye.reactive</groupId>
+      <artifactId>smallrye-mutiny-vertx-config</artifactId>
+    </dependency>
+    <dependency>
+      <groupId>io.vertx</groupId>
+      <artifactId>vertx-config-yaml</artifactId>
     </dependency>
     <dependency>
       <groupId>io.eventx</groupId>
