--- a/eventx-infrastructure/eventx-sql/pom.xml
+++ b/eventx-infrastructure/eventx-sql/pom.xml
@@ -34,6 +34,7 @@
       <groupId>io.vertx</groupId>
       <artifactId>vertx-sql-client</artifactId>
       <version>4.4.3</version>
+      <scope>runtime</scope>
     </dependency>
     <dependency>
       <groupId>io.smallrye.reactive</groupId>
