--- a/es4j-infrastructure/es4j-http-client/pom.xml
+++ b/es4j-infrastructure/es4j-http-client/pom.xml
@@ -6,7 +6,7 @@
   <parent>
     <groupId>io.es4j</groupId>
     <artifactId>es4j-infrastructure</artifactId>
-    <version>${revision}</version>
+    <version>0</version>
   </parent>
 
   <artifactId>es4j-http-client</artifactId>
