--- a/es4j-infrastructure/es4j-queue/pom.xml
+++ b/es4j-infrastructure/es4j-queue/pom.xml
@@ -5,7 +5,7 @@
   <parent>
     <groupId>io.es4j</groupId>
     <artifactId>es4j-infrastructure</artifactId>
-    <version>${revision}</version>
+    <version>0</version>
   </parent>
   <modelVersion>4.0.0</modelVersion>
 
