--- a/pom.xml
+++ b/pom.xml
@@ -40,7 +40,6 @@
       <distribution>repo</distribution>
     </license>
   </licenses>
-  git@github.com:Reef3rm4n/es4j.git
   <scm>
     <connection>scm:git:git://github.com/Reef3rm4n/es4j.git</connection>
     <developerConnection>scm:git:ssh://github.com:Reef3rm4n/es4j.git</developerConnection>
@@ -79,19 +78,19 @@
           </execution>
         </executions>
       </plugin>
-<!--      <plugin>-->
-<!--        <groupId>org.apache.maven.plugins</groupId>-->
-<!--        <artifactId>maven-javadoc-plugin</artifactId>-->
-<!--        <version>3.2.0</version>-->
-<!--        <executions>-->
-<!--          <execution>-->
-<!--            <id>attach-javadoc</id>-->
-<!--            <goals>-->
-<!--              <goal>jar</goal>-->
-<!--            </goals>-->
-<!--          </execution>-->
-<!--        </executions>-->
-<!--      </plugin>-->
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-javadoc-plugin</artifactId>
+        <version>3.2.0</version>
+        <executions>
+          <execution>
+            <id>attach-javadoc</id>
+            <goals>
+              <goal>jar</goal>
+            </goals>
+          </execution>
+        </executions>
+      </plugin>
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-source-plugin</artifactId>
