--- a/.github/workflows/maven-publish.yml
+++ b/.github/workflows/maven-publish.yml
@@ -1,4 +1,4 @@
-name: Maven Publish
+name: es4j-publish
 on:
   push:
     branches:
@@ -21,9 +21,9 @@ jobs:
           server-password: MAVEN_PASSWORD
           gpg-private-key: ${{ secrets.GPG_PRIVATE_KEY }}
           gpg-passphrase: GPG_PASSPHRASE
-      - name: Publish Packages
+      - name: publish-maven-central-packages
         run: mvn --batch-mode clean deploy
         env:
-          MAVEN_USERNAME: ${ secrets. OSSRH_USERNAME }}
-          MAVEN_PASSWORD: ${ secrets. OSSRH_PASSWORD }}
-          GPG_PASSPHRASE: ${{ secrets. GPG_PASSPHRASE }}
+          MAVEN_USERNAME: ${secrets.OSSRH_USERNAME}}
+          MAVEN_PASSWORD: ${secrets.OSSRH_PASSWORD}}
+          GPG_PASSPHRASE: ${{secrets.GPG_PASSPHRASE}}
