--- a/.github/workflows/maven-publish.yml
+++ b/.github/workflows/maven-publish.yml
@@ -16,7 +16,7 @@ jobs:
           java-version: '17'
 
       - name: Build with Maven
-        run: mvn -B package --file pom.xml -DskipTests
+        run: mvn -B package -Dmaven.javadoc.skip=true --file pom.xml -DskipTests
 
       - name: Publish to GitHub Packages Apache Maven
         run: mvn deploy -DskipTests
