- fixes javadoc generation

--- a/pom.xml
+++ b/pom.xml
@@ -85,6 +85,10 @@
             </goals>
           </execution>
         </executions>
+        <configuration>
+          <excludePackageNames>io.es4j.core.objects</excludePackageNames>
+          <excludePackageNames>io.es4j.infrastructure.models</excludePackageNames>
+        </configuration>
       </plugin>
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
