--- a/.github/workflows/maven-publish.yml
+++ b/.github/workflows/maven-publish.yml
@@ -16,12 +16,7 @@ jobs:
           java-version: '17'
 
       - name: Build with Maven
-        run: mvn -B package -Dmaven.javadoc.skip=true --file pom.xml -DskipTests
-
-#      - name: Publish to GitHub Packages Apache Maven
-#        run: mvn deploy -DskipTests
-#        env:
-#          GITHUB_TOKEN: ${{ github.token }} # GITHUB_TOKEN is the default env for the password
+        run: mvn -B package --file pom.xml -DskipTests
 
       - name: Set up Apache Maven Central
         uses: actions/setup-java@v3
@@ -40,3 +35,7 @@ jobs:
           OSSRH_USERNAME: ${{ secrets.OSSRH_USERNAME }}
           OSSRH_PASSWORD: ${{ secrets.OSSRH_PASSWORD }}
           GPG_PASSPHRASE: ${{ secrets.GPG_PASSPHRASE }}
+      #      - name: Publish to GitHub Packages Apache Maven
+      #        run: mvn deploy -DskipTests
+      #        env:
+      #          GITHUB_TOKEN: ${{ github.token }} # GITHUB_TOKEN is the default env for the password
