- projection service - skeleton for business rules service - fixes to pom - projection route

--- a/es4j-core/pom.xml
+++ b/es4j-core/pom.xml
@@ -85,6 +85,11 @@
       <groupId>io.soabase.record-builder</groupId>
       <artifactId>record-builder-processor</artifactId>
     </dependency>
+    <dependency>
+      <groupId>com.github.victools</groupId>
+      <artifactId>jsonschema-generator</artifactId>
+      <version>4.31.1</version>
+    </dependency>
     <!--    Logging Dependencies -->
     <dependency>
       <groupId>org.slf4j</groupId>
