--- a/es4j-test/pom.xml
+++ b/es4j-test/pom.xml
@@ -20,6 +20,7 @@
     <gatling-maven-plugin.version>4.3.4</gatling-maven-plugin.version>
     <maven-compiler-plugin.version>3.10.1</maven-compiler-plugin.version>
     <maven-jar-plugin.version>3.2.2</maven-jar-plugin.version>
+    <mockito-core.version>5.3.1</mockito-core.version>
   </properties>
 
   <dependencyManagement>
@@ -52,7 +53,6 @@
           </execution>
         </executions>
         <configuration>
-
           <infoTitle>Fake Aggregate API</infoTitle>
           <includeDependenciesScopes>compile,provided,system,test,import</includeDependenciesScopes>
           <scanClasses>*</scanClasses>
@@ -77,6 +77,7 @@
       <groupId>io.es4j</groupId>
       <artifactId>es4j-postgres-storage</artifactId>
       <version>${project.version}</version>
+      <scope>test</scope>
     </dependency>
     <dependency>
       <groupId>io.es4j</groupId>
@@ -100,24 +101,19 @@
       <scope>compile</scope>
     </dependency>
     <dependency>
-      <groupId>io.smallrye.reactive</groupId>
-      <artifactId>smallrye-mutiny-vertx-web-client</artifactId>
-    </dependency>
-    <dependency>
       <groupId>org.mockito</groupId>
       <artifactId>mockito-core</artifactId>
-      <version>5.3.1</version>
+      <version>${mockito-core.version}</version>
     </dependency>
     <dependency>
       <groupId>org.mockito</groupId>
       <artifactId>mockito-junit-jupiter</artifactId>
-      <version>5.3.1</version>
+      <version>${mockito-core.version}</version>
     </dependency>
     <dependency>
       <groupId>io.es4j</groupId>
       <artifactId>es4j-http-client</artifactId>
       <version>${project.version}</version>
-      <scope>compile</scope>
     </dependency>
   </dependencies>
 </project>
