- bunch of fixes

--- a/es4j-stack/pom.xml
+++ b/es4j-stack/pom.xml
@@ -27,7 +27,7 @@
 
   <dependencyManagement>
     <dependencies>
-      <!--      Event.x Framework -->
+      <!--      Es4j Framework -->
       <dependency>
         <groupId>io.es4j</groupId>
         <artifactId>es4j-core</artifactId>
