--- a/es4j-infrastructure/es4j-postgres-message-broker/pom.xml
+++ b/es4j-infrastructure/es4j-postgres-message-broker/pom.xml
@@ -2,33 +2,21 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0"
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
-  <modelVersion>4.0.0</modelVersion>
   <parent>
     <groupId>io.es4j</groupId>
     <artifactId>es4j-infrastructure</artifactId>
     <version>0</version>
   </parent>
+  <modelVersion>4.0.0</modelVersion>
 
-  <artifactId>es4j-task</artifactId>
+  <artifactId>es4j-postgres-message-broker</artifactId>
+
 
   <properties>
     <maven.compiler.source>17</maven.compiler.source>
     <maven.compiler.target>17</maven.compiler.target>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
   </properties>
-
-  <dependencyManagement>
-    <dependencies>
-      <dependency>
-        <groupId>io.es4j</groupId>
-        <artifactId>es4j-dependencies</artifactId>
-        <version>${project.version}</version>
-        <type>pom</type>
-        <scope>import</scope>
-      </dependency>
-    </dependencies>
-  </dependencyManagement>
-
 
   <dependencies>
     <dependency>
@@ -37,19 +25,14 @@
       <version>${project.version}</version>
     </dependency>
     <dependency>
-      <groupId>com.cronutils</groupId>
-      <artifactId>cron-utils</artifactId>
-      <version>9.2.0</version>
-    </dependency>
-    <dependency>
-      <groupId>io.es4j</groupId>
-      <artifactId>es4j-postgres-queue</artifactId>
-      <version>${project.version}</version>
-    </dependency>
-    <dependency>
       <groupId>io.soabase.record-builder</groupId>
       <artifactId>record-builder-processor</artifactId>
     </dependency>
+    <dependency>
+      <groupId>com.fasterxml.jackson.core</groupId>
+      <artifactId>jackson-annotations</artifactId>
+    </dependency>
   </dependencies>
+
 
 </project>
