--- a/es4j-infrastructure/es4j-task/pom.xml
+++ b/es4j-infrastructure/es4j-task/pom.xml
@@ -43,7 +43,7 @@
     </dependency>
     <dependency>
       <groupId>io.es4j</groupId>
-      <artifactId>es4j-postgres-queue</artifactId>
+      <artifactId>es4j-postgres-message-broker</artifactId>
       <version>${project.version}</version>
     </dependency>
     <dependency>
