- adds first draft for saga - adds frist draft for cdc

--- a/es4j-extensions/pom.xml
+++ b/es4j-extensions/pom.xml
@@ -12,6 +12,7 @@
   <packaging>pom</packaging>
   <modules>
     <module>es4j-config-storage</module>
+      <module>es4j-saga</module>
   </modules>
 
   <artifactId>es4j-extensions</artifactId>
